# designpatterns

./: .gitignore
SOLID/SingleResponsibilityPrinciple/: CMakeLists.txt  main.cpp
